# marginalia-atlas

./: .gitignore  README.md  attachments.json  indexes.json  inventory.json  notes.txt  pyproject.toml
src/marginaliaatlas/: __main__.py  code.py
